--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -3,392 +3,26 @@ body {
     margin: 0;
     font-family: 'Open Sans'
 }
-.tables-container {
-    display: flex;
-    flex-direction: column;
-}
-.wrapper {
-    display: flex;
-    flex-direction: row;
-}
-.topNav{
-    padding:10px;
-    font-weight:bolder;
-    font-size:20px;
-}
-.topNav::after {
-    content: '';
-    display: block;
-    clear:both;
-}
-.side {
-    width: 300px;
-    background-color: #fafafa;
-    height: 100vh;
-    box-sizing: border-box;
-}
-.side + div {
-    flex: 1;
+
+.main-wrapper {
+  width: 100%;
+  display: flex;
+  height: 100%;
 }
 
-.table-create-block .side-block {
-    overflow: auto;
-    max-height: 200px;
+.side-wrapper {
+  width: 20%;
+  border: 1px solid black;
+  height: 100vh;
+  padding: 5px;
 }
 
-.table-create-block .side-block::after{
-    content: '';
-    display:block;
-    clear:both;
+.display-wrapper {
+  width: 80%;
+  height: 100%;
+  padding: 5px;
 }
-
-.table-create-block h4 {
-    background-color: #f4f4f4;
-    height: 33px;
-    line-height: 33px;
-}
-
-
-.side-block {
-    padding: 20px;
-    max-height: 100% !important;
-}
-
-.table-navbar {
-    height: 55px;
-    background-color: #f9f9f9;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.table-navbar .size-buttons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.canvas {
-    position: relative;
-    background: #fff;
-    border: 1px solid #aaa;
-    min-width: 400px;
-    overflow: auto;
-    /* background-image: linear-gradient(to right, #eaeaff 1px, transparent 1px), linear-gradient(to bottom, #eaeaff 1px, transparent 1px); */
-    background-image: url('../images/grid.png')
-}
-
-.react-draggable {
-  text-align: center;
-  position: absolute;
-  cursor: default;
-}
-.react-draggable.selected {
-  z-index: 1;
-}
-
-.addTableWrapper {
-    float: left;
-}
-
-.table {
-  font-family: sans-serif;
-  /* border: 1px solid #ddd; */
-  -webkit-touch-callout: none !important; /* iOS Safari */
-  -webkit-user-select: none !important;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none !important;    /* Konqueror */
-  -moz-user-select: none !important;      /* Firefox */
-  -ms-user-select: none !important;       /* Internet Explorer/Edge */
-  user-select: none !important;           /* Non-prefixed version, currently supported */
-  box-sizing: border-box;
-  position: relative;
-}
-
-.table.selected {
-    border: 1px solid #00ee44;
-    background-color: rgba(240, 240, 240, 0.4);
-}
-
-.table {
-    border: 1px solid transparent
-}
-
-.table.square {
-    /* border-radius: 1px; */
-}
-
-.table.circle {
-    /* border-radius: 50%; */
-}
-.table {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.table .table-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-.table .table-content {
-    text-align: center;
-}
-
-.roomInfo{
-    margin-top:5px;
-    margin-bottom:10px;
-}
-
-#itemDescription{
-    margin-top:5px;
-    margin-bottom:10px;
-    width: 100%;
-    resize: none;
-    height: 50px;
-}
-
-/*.table .rotator {
-    background-color: red;
-    text-align: center;
-    width: 10px;
-    height: 10px;
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    transform: translate(-5px, 0);
-}*/
-
-.resaSlot{
-    width:100%;
-    cursor:pointer;
-}
-
-.tableNavBarRoomList{
-    list-style: none;
-    width:100%
-}
-
-.tableNavBarRoom{
-    display: inline;
-    margin-left:15px;
-    cursor:pointer;
-    font-size: medium;
-}
-
-.tableNavBarRoom:hover{
-    text-decoration: underline;
-}
-
-.roomSelected{
-    font-weight:bolder;
-    text-decoration: underline;
-}
-
-.tables-container .wrapper .side .table-create-title{
-    margin:0;
-}
-
-.closeDat{
-    text-align: right;
-}
-.closeDat span{
-    color:red;
-    float:right;
-    font-weight:bold;
-    text-decoration: underline;
-}
-
-/**/
-
-.table-create-title{
-    font-weight: 600;
-    line-height: 2;
-    color: #9b9b9b;
-}
-
-.resaContentBoxes{
-    display:flex;
-    justify-content: space-between;
-}
-
-.resaCustomerBox{
-    width:153px;
-    height:40px;
-    border-radius: 2px;
-    background-color: #f9f9f9;
-    border: solid 1px #e6e6e6;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left:10px;
-    padding-right:10px;
-}
-
-.resaContent div:first-child{
-    margin-right: 20px;
-}
-
-.resaContent div:last-child{
-    color: #6a6a6a;
-    margin-left: 33%;
-}
-
-.resaContent {
-    border-top: solid 1px #e6e6e6;
-    border-left: solid 1px #e6e6e6;
-    border-right: solid 1px #e6e6e6;
-}
-
-.resaContent:last-child {
-    border-bottom: solid 1px #e6e6e6;
-}
-
-.reviewInfosContent {
-    border: solid 1px #e6e6e6;
-    margin:10px;
-}
-
-.reviewContent{
-    padding:10px;
-}
-
-.reviewContent:last-child{
-    padding:0;
-}
-
-.reviewContent:first-child{
-    display:flex;
-    justify-content: space-between;
-}
-
-.reviewContent:first-child div div:first-child{
-    font-size: large;
-    font-weight: bold;
-}
-
-.reviewContentTitle {
-    padding:10px;
-    background-color: #f4f4f4;
-    font-weight:bolder;
-}
-
-.reviewContentGrade {
-    padding:10px;
-    display:flex;
-    justify-content: space-between;
-    border-bottom: solid 1px #e6e6e6;
-}
-
-.reviewContentGrade div:first-child{
-    color: #9b9b9b;
-}
-
-.reviewContentGrade:last-child {
-    border:0;
-}
-
-.resaTables {
-    padding:10px;
-    display:flex;
-    justify-content: space-between;
-    border-bottom: solid 1px #e6e6e6;
-}
-
-.resaTables div{
-    text-align: left;
-    width:20%
-}
-
-.resaTables div div {
-    width:100%
-}
-
-.resaTables:last-child {
-    border:0;
-}
-
-/* A CHANGER */
-.resaSlotTable div:not(:first-child) {
-    font-weight: bold!important;
-    font-size: larger!important;
-}
-
-.resaTableMax {
-    width: 10% !important;
-}
-
-.resaTableBox{
-    width:10%;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    border: solid 1px #e6e6e6;
-    margin:5px;
-}
-
-.resaTableBox div{
-    padding-left:10px;
-    padding-right:10px;
-}
-
-.resaTableBox.current{
-    background-color: #f9f9f9;
-    border: solid 1px #71c4a8;
-}
-
-.resaTableBox div:last-child{
-    text-align: right;
-}
-
-.SCORE {
-    width: 100%;
-    height: 100%;
-    position:absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index:10;
-    pointer-events: none;
-}
-
-.tableHour{
-    width:60%;
-    border: 1px black solid;
-    color:#fff;
-    text-align: center;
-}
-
-.tableHour.confirmed {
-    background-color: #5a95b4;
-}
-
-.tableHour.waiting {
-    background-color: #f2b45d;
-    border: solid 1px #f2b45d;
-}
-
-.tableHour.arrived {
-    background-color: #71c4a8;
-    border: solid 1px #71c4a8;
-}
-
-.loader {
-    background-color:red;
-}
-
-.selected.Red {
-    border-radius: 2px;
-    border: 1px solid #c40a1b!important;
-    background-color: rgba(113,196,168,.05);
-}
-
-.notAdviced {
-    background-color: brown;
-}
-
-.adviced {
-    background-color: yellow;
-}
+ .item-single {
+   border : 1px solid black;
+   padding: 10px;
+ }
